# vyl

./: .gitignore  hey.bat  main.py  pyproject.toml
vyl/: installer.py  kernel.py  requirements.py  routing.py
vyl/ai/: chatloader.py  memoryloader.py  provider.py  solution.py  solver.py  task.py
vyl/ai/concepts/: VYL_CONCEPTS.sysprompt.md  conceptloader.py
vyl/ai/providers/: huggingface.py
vyl/platform/: requirements.py
vyl/ui/: io.py  terminalio.py
vyl/utils/: checkos.py  crash.py  eval.py  process.py
